--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "dependencies": {
         "bootstrap": "^5.3.3",
         "cloudinary": "^2.0.3",
+        "connect-redis": "^7.1.1",
+        "cookie-parser": "^1.4.6",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "express-handlebars": "^7.1.2",
+        "express-session": "^1.18.0",
+        "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
-        "mysql2": "^3.9.1"
+        "mysql2": "^3.9.1",
+        "redis": "^4.6.14",
+        "sequelize": "^4.0.0"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "morgan": "^1.10.0",
         "node-sass": "^9.0.0",
         "nodemon": "^3.0.3",
-        "prettier": "3.2.5"
+        "prettier": "3.2.5",
+        "sequelize-cli": "^6.6.2"
     }
 }
