--- a/src/config/config.json
+++ b/src/config/config.json
@@ -12,7 +12,11 @@
             "min": 0,
             "acquire": 30000,
             "idle": 10000
-        }
+        },
+        "dialectOptions": {
+            "timezone": "Z"
+        },
+        "timezone": "+00:00"
     },
     "test": {
         "username": "root",
